--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "804b16f3-0a1a-41d0-a588-1284a521a5dc"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
