--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
-    "ngx-toastr": "^16.1.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.3",
-    "@angular/cli": "~12.0.3",
+    "@angular/cli": "^12.0.5",
     "@angular/compiler-cli": "~12.0.3",
     "@types/node": "^12.11.1",
     "typescript": "~4.2.3"
